2011-10-09  Jakub Jelinek  <jakub@redhat.com>
	    Diego Novillo  <dnovillo@google.com>

	* pt.c (reregister_specialization): Use htab_find instead of
	htab_find_slot with INSERT.

2011-09-26  Jason Merrill  <jason@redhat.com>

	PR c++/46105
	* typeck.c (structural_comptypes): Ignore cv-quals on typename scope.

	PR c++/50508
	* semantics.c (cxx_eval_logical_expression): Use tree_int_cst_equal
	rather than ==.

2011-09-23  Jason Merrill  <jason@redhat.com>

	Core 253 - allow const objects with no initializer or
	user-provided default constructor if the defaulted constructor
	initializes all the subobjects.
	PR c++/20039
	PR c++/42844
	* class.c (default_init_uninitialized_part): New.
	* cp-tree.h: Declare it.
	* decl.c (check_for_uninitialized_const_var): Use it.
	* init.c (perform_member_init): Likewise.
	(build_new_1): Likewise.
	* method.c (walk_field_subobs): Likewise.

2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50491
	* semantics.c (potential_constant_expression_1): Handle USING_DECL.

2011-09-17  Jason Merrill  <jason@redhat.com>

	PR c++/50442
	Revert:
	PR c++/49267
	* call.c (compare_ics): rvaluedness_matches_p can differ
	based on the source type, not just target.

2011-09-16  Jason Merrill  <jason@redhat.com>

	PR c++/50424
	* tree.c (bot_manip): Set cp_function_chain->can_throw.

2011-09-13  Dodji Seketeli  <dodji@redhat.com>

	PR c++/48320
	* pt.c (template_parameter_pack_p):  Support TEMPLATE_PARM_INDEX
	nodes.  Add a comment.
	(arg_from_parm_pack_p): New static function, factorized out from
	tsubst_pack_expansion and extended to support non-type parameter
	packs represented with TEMPLATE_PARM_INDEX nodes.
	(tsubst_pack_expansion): Use arg_from_parm_pack_p.

2011-09-08  Jakub Jelinek  <jakub@redhat.com>

	PR c++/50255
	* method.c (use_thunk): If emitting thunk into the same section
	as function, use the same DECL_COMDAT_GROUP as well.

2011-09-07  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50309